crates/tui/src/bottom_pane/request_user_input/snapshots/savfox_tui__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: crates/tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 2/2 (2 unanswered)                                                                                           
  Share details.                                                                                                        
                                                                                                                        
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  ❯ Type @ to mention files, / for commands, or ? for shortcuts                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  enter to submit all | ctrl + n first question | esc to interrupt
